kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: httpbin
---
