kubernetes/pub-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-0c826e1c08dba3a3f,subnet-05620ba7d1a4474f9
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /get
        pathType: Exact
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
---
